Fix 1139 (#1140)